Polish battle API naming and ordering